--- a/src/Main/style.css
+++ b/src/Main/style.css
@@ -1,6 +1,11 @@
 html, body {
   background: #333435;
   box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #444;
+  overflow: hidden;
 }
 
 * {
