--- a/src/Editor/FileTree/style.css
+++ b/src/Editor/FileTree/style.css
@@ -1,27 +1,50 @@
-.FileTree {
-  padding: 10px 0;
-}
+.FileTree {}
 
 .FileTree-Project {
-  padding: 14px 10px 14px 20px;
-  font-weight: 400;
-  color: #fff;
+  background: transparent;
+  border: none;
+  padding: 10px;
+  color: rgba(255, 255, 255, 0.6);
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.6);
   font-size: 12px;
+  font-style: italic;
+  width: 100%;
+  text-align: left;
+  outline: none;
 }
 
 .FileTree-Project .project-title,
-.FileTree-Project .project-chevron {
+.FileTree-Project .project-chevron,
+.FileTree-File .file-title {
   vertical-align: middle;
+}
+
+.FileTree-Project .project-chevron {
+  font-size: 16px;
+  transition: transform .3s ease;
 }
 
 .FileTree-Project.expanded .project-chevron {
   transform: rotateZ(90deg);
 }
 
+.FileTree-Project-Content {
+  padding: 10px;
+}
+
 .FileTree-File {
-  padding: 7px 10px 7px 46px;
-  font-weight: 400;
-  color: #fff;
+  background: transparent;
+  border: none;
+  padding: 5px 10px;
+  color: rgba(255, 255, 255, 0.8);
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.6);
   font-size: 12px;
-  cursor: default;
+  width: 100%;
+  text-align: left;
+  outline: none;
+  border-radius: 3px;
+}
+
+.FileTree-File:focus {
+  background: rgba(255, 255, 255, 0.2);
 }
